refactor - changed PostgreSQL compose service image version
Pulling PostgreSQL is a pain in the neck so we used the latest tag which was also stable instead of version 13, right now the latest tag is version 16

--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,7 @@ services:
         protocol: tcp
 
   postgres:
-    image: postgres:13
+    image: postgres
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
